{{$NEXT}}

0.003     2019-05-07 19:22:58 EDT
  - If $HTTP::Simple::JSON is set to a module name, use decode_json and
    encode_json from that module

0.002     2019-03-01 14:46:46 EST
  - Fix postfile test to avoid default PerlIO layers

0.001     2019-03-01 00:35:01 EST
  - First release