@@ -43,8 +43,11 @@
             "File::Basename" : "0",
             "File::Temp" : "0",
             "HTTP::Tiny" : "0.014",
-            "JSON::PP" : "0",
+            "JSON::PP" : "2.07",
             "perl" : "5.008001"
+         },
+         "suggests" : {
+            "Cpanel::JSON::XS" : "4.11"
          }
       },
       "test" : {
