@@ -4,5 +4,6 @@ requires 'Exporter' => '5.57';
 requires 'File::Basename';
 requires 'File::Temp';
 requires 'HTTP::Tiny' => '0.014';
-requires 'JSON::PP';
+requires 'JSON::PP' => '2.07';
 test_requires 'Test::More' => '0.88';
+suggests 'Cpanel::JSON::XS' => '4.11';
