@@ -7,7 +7,6 @@ use Exporter 'import';
 use File::Basename 'dirname';
 use File::Temp;
 use HTTP::Tiny;
-use JSON::PP;
 
 our $VERSION = '0.004';
 
@@ -21,7 +20,18 @@ our %EXPORT_TAGS = (
 );
 
 our $UA = HTTP::Tiny->new(agent => "HTTP::Simple/$VERSION");
-our $JSON = JSON::PP->new->utf8->canonical->allow_nonref->convert_blessed;
+
+our $JSON;
+{
+  local $@;
+  if (eval { require Cpanel::JSON::XS; Cpanel::JSON::XS->VERSION('4.11'); 1 }) {
+    $JSON = Cpanel::JSON::XS->new->utf8->canonical->allow_nonref->convert_blessed->allow_dupkeys;
+  }
+}
+unless (defined $JSON) {
+  require JSON::PP;
+  $JSON = JSON::PP->new->utf8->canonical->allow_nonref->convert_blessed;
+}
 
 sub get {
   my ($url) = @_;
@@ -164,11 +174,13 @@ The L<HTTP::Tiny> object used by these functions to make requests can be
 accessed as C<$HTTP::Simple::UA> (for example, to configure the timeout, or
 replace it with a compatible object like L<HTTP::Tinyish>).
 
-The JSON encoder used by the JSON functions defaults to a L<JSON::PP> instance,
-and can be accessed as C<$HTTP::Simple::JSON>. If replaced with a new object,
-it should have UTF-8 encoding/decoding enabled (usually the C<utf8> option). If
-it is set to a string, it will be used as a module name that is expected to
-have C<decode_json> and C<encode_json> functions.
+The JSON encoder used by the JSON functions can be accessed as
+C<$HTTP::Simple::JSON>, and defaults to a L<Cpanel::JSON::XS> object if
+L<Cpanel::JSON::XS> 4.11+ is installed, and otherwise a L<JSON::PP> object. If
+replaced with a new object, it should have UTF-8 encoding/decoding enabled
+(usually the C<utf8> option). If it is set to a string, it will be used as a
+module name that is expected to have C<decode_json> and C<encode_json>
+functions.
 
 =head1 FUNCTIONS
 
